# whitelist_backend

./: .env.example  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: application.py  bot.py  deps.py  user.py
app/db/: __init__.py  crud.py  declarative.py  session.py
app/db/tables/: __init__.py  admin.py  choices.py  user.py
app/services/: application_builder.py  http.py  telegram.py
app/services/RCC/: models.py  service.py
app/services/vk_bot/: bot.py  payloads.py  rules.py
app/services/vk_bot/handlers/: __init__.py  applications.py  notifications.py  whiltelist.py
migrations/versions/: 1019b229de75_.py  3c0669346b07_.py  c6567a2762b2_.py
nginx/: Dockerfile  backend.conf
