[tool.poetry]
name = "questionnaire-collect-people-bot"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "<2.0.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
loguru = "^0.7.0"
sqlalchemy = "^2.0.20"
vkbottle = "^4.3.12"
alembic = "^1.12.0"
fastapi = {version = "0.99.0", extras = ["all"]}
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
select = ['Q', 'F', 'I', 'B', 'C4', 'TID', 'ARG', 'PLR']
ignore = ['PLR0913']
# ANN - https://beta.ruff.rs/docs/rules/#flake8-annotations-ann,
# PLR0913 - Too many arguments


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Unused import
"tests/*" = ['ANN']  # Annotations
"app/handlers/*" = ['ARG001']
"app/core/custom_rules/*" = ['ARG002']

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.black]
skip-string-normalization = true
exclude = '(\.git|\.venv|\.vscode)'
line-length = 120